[tool.poetry]
name = "music"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pafy = "^0.5.5"
youtube_dl = "^2021.6.6"
urllib3 = "^1.26.7"
requests = "^2.26.0"
youtube-search = "^2.1.0"
Flask = "^2.0.1"
Eel = "^0.14.0"
pytube4 = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
